--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ LOG_LEVEL=info
 
 # Database Configuration
 DATABASE_URL=postgresql://neondb_owner:npg_GaAqHodBX3E5@ep-delicate-shape-a1aa914y-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+# Arcjet
+ARCJET_KEY=ajkey_01k8nq7daqf23sv12ze6fmz03t
