--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acquisitions",
+  "name": "express-master",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,47 +12,57 @@
     "#services/*": "./src/services/*",
     "#routes/*": "./src/routes/*",
     "#utils/*": "./src/utils/*",
-    "#validation/*": "./src/validation/*"
+    "#validations/*": "./src/validations/*"
   },
   "scripts": {
+    "start": "node src/index.js",
     "dev": "node --watch src/index.js",
-    "start": "node index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "dev:docker": "sh ./scripts/dev.sh",
+    "prod:docker": "sh ./scripts/prod.sh",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hongminglow/acquisitions.git"
+    "url": "git+https://github.com/hongminglow/express-master.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hongminglow/acquisitions/issues"
+    "url": "https://github.com/hongminglow/express-master/issues"
   },
-  "homepage": "https://github.com/hongminglow/acquisitions#readme",
+  "homepage": "https://github.com/hongminglow/express-master#readme",
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.2",
+    "@arcjet/inspect": "^1.0.0-beta.11",
+    "@arcjet/node": "^1.0.0-beta.11",
+    "@neondatabase/serverless": "^1.0.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.7",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "winston": "^3.18.3"
+    "winston": "^3.17.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "drizzle-kit": "^0.31.5",
-    "eslint": "^9.38.0",
+    "@eslint/js": "^9.35.0",
+    "drizzle-kit": "^0.31.4",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "prettier": "^3.6.2"
+    "jest": "^30.1.3",
+    "prettier": "^3.6.2",
+    "supertest": "^7.1.4"
   }
 }
